[gd_scene load_steps=9 format=3 uid="uid://dwl57c6c7y0pt"]

[ext_resource type="Script" path="res://scripts/interface/main_menu.gd" id="1_7778t"]
[ext_resource type="Texture2D" uid="uid://bqvoh4ocxnj2t" path="res://assets/textures/HATSUNEMIKU.jpg" id="2_nhwna"]
[ext_resource type="PackedScene" uid="uid://cw68nrdep31id" path="res://scenes/levels/main.tscn" id="2_ph6tj"]
[ext_resource type="Texture2D" uid="uid://c2w8fj7hgs1nc" path="res://assets/textures/_A4EAB27C-0B71-47EC-AC4D-8FD67CFD205F_-removebg-preview (1).png" id="3_dwyql"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_avltm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvv14"]
content_margin_left = 100.0
bg_color = Color(0, 0, 0, 0.8)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 100.0
expand_margin_right = 100.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_txdxx"]
content_margin_left = 100.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 100.0
expand_margin_right = 100.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cosjt"]
bg_color = Color(0, 0, 0, 0.8)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 100.0

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7778t")
main_scene = ExtResource("2_ph6tj")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -94.0
offset_top = -90.0
offset_right = -94.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.15, 1.15)
texture = ExtResource("2_nhwna")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -312.0
offset_right = 440.0
offset_bottom = -72.0
grow_vertical = 0

[node name="ClassSelect" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 40
selected = 0
item_count = 3
popup/item_0/text = "Select a class"
popup/item_0/disabled = true
popup/item_1/text = "Sniper"
popup/item_1/id = 1
popup/item_2/text = "Wizard"
popup/item_2/id = 2

[node name="Username" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
placeholder_text = "Name"

[node name="Host Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_avltm")
theme_override_styles/hover = SubResource("StyleBoxFlat_hvv14")
theme_override_styles/pressed = SubResource("StyleBoxFlat_txdxx")
theme_override_styles/normal = SubResource("StyleBoxFlat_cosjt")
text = "Host"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
placeholder_text = "Address to join"

[node name="Start Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_avltm")
theme_override_styles/hover = SubResource("StyleBoxFlat_hvv14")
theme_override_styles/pressed = SubResource("StyleBoxFlat_txdxx")
theme_override_styles/normal = SubResource("StyleBoxFlat_cosjt")
text = "スタート"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_avltm")
theme_override_styles/hover = SubResource("StyleBoxFlat_hvv14")
theme_override_styles/pressed = SubResource("StyleBoxFlat_txdxx")
theme_override_styles/normal = SubResource("StyleBoxFlat_cosjt")
text = " 設定"

[node name="Quit Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_avltm")
theme_override_styles/hover = SubResource("StyleBoxFlat_hvv14")
theme_override_styles/pressed = SubResource("StyleBoxFlat_txdxx")
theme_override_styles/normal = SubResource("StyleBoxFlat_cosjt")
text = "終了"

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 886.0
offset_top = 94.0
offset_right = 1605.19
offset_bottom = 398.0
texture = ExtResource("3_dwyql")
expand_mode = 3

[connection signal="pressed" from="VBoxContainer/Host Button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
